# Awesome-openclaw-slills

./: .gitignore  README.md  SKILLS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BACKLOG.md  PROJECT_STATUS.md
evaluation/: __init__.py  test_schema.py  test_static.py
evaluation/fixtures/safe_skill/: SKILL.md
evaluation/fixtures/unsafe_skill/: SKILL.md
examples/skills/: safe_calculator_skill.json  safe_weather_skill.py  unsafe_malicious_skill.py
examples/skills/safe_skill/: SKILL.md
examples/skills/safe_skill_with_scripts/: SKILL.md
examples/skills/safe_skill_with_scripts/scripts/: helper.py
examples/skills/unsafe_skill/: SKILL.md
ingestion/: __init__.py  clawhub_fetch.py  schema.py  sync.py
ranking/: __init__.py  engine.py  registry.py  usage.py
scripts/: build_registry.py  generate_awesome_list.py  run_tests.py
skill_auditor/: __init__.py  analyzer.py  cli.py  report.py  scorer.py
skill_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
skill_auditor/adapters/: __init__.py  skill_md.py
skill_auditor/checks/: __init__.py  base.py  data_exfiltration.py  env_leakage.py  network_access.py  permission_scope.py  shell_injection.py
skills_index/: curated_seeds.json  registry.json
tests/: test_analyzer.py  test_checks.py
web/: README.md  next.config.js  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/skills/: route.ts
web/src/components/: Chat.tsx  Header.tsx  SkillList.tsx
web/src/lib/: categories.ts  skills.ts
